--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,12 +2,12 @@
 
 <table>
   <tr>
-    <th>User</th>
+    <th>Users</th>
   </tr>
 
-  <%= @users.each do |user| %>
+  <% @users.each do |user| %>
     <tr>
-      <td><%= user.name %></td>
+      <td><%= link_to "#{user.name}", user_path(user.id) %></td>
     </tr>
   <% end %>
 </table>
