Add messages to idex view and site conroller

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -2,3 +2,12 @@
 <%= @title %>
 
 
+<ul>
+  <% @messages.each do |message| %>
+    <h3><%= message.user.name %></h3>
+    <li><%= message.subject %></li>
+    <li><%= message.content %></li>
+  <%end%>
+</ul>
+
+
