--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,4 +1,14 @@
 <h1>What's Quack'n<h1>
 <%= @title %>
 
-
+  <form method="post" action="/contact">
+    <fieldset class="col-sm-6">
+      <div class="form-group">
+        <label for="message">Search: </label>
+        <textarea id="message" name="message" class="form-control"></textarea>
+      </div>
+      <div class="form-group">
+        <input type="submit" value="Send message" class="btn btn-info btn-sm">
+      </div>
+    </fieldset>
+  </form>
