Add link to user page and add user. add css style to homepage

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -4,9 +4,11 @@
 
 <ul>
   <% @messages.each do |message| %>
+    <div class="space_div">
     <h3><%= message.user.name %></h3>
     <li><%= message.subject %></li>
     <li><%= message.content %></li>
+    </div>
   <%end%>
 </ul>
 
