--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><%= link_to 'Home', root_path %></li>
             <li><%= link_to 'Create Account', new_user_path %></li>
             <li><%= link_to 'Users', new_user_path %></li>
           </ul>
@@ -40,7 +40,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">Place sticky footer content here.</p>
+        <p class="text-muted">Going for a hoon!</p>
       </div>
     </footer>
   </body>
