--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
 <h1>Create Your Profile</h1>
 <%= form_for :user, url: users_path do |f| %>
   Name: <%= f.text_field :name %><br />
+  Password: <%= f.text_field :password %><br />
   Age: <%= f.text_field :age %><br />
   Location: <%= f.text_field :location %><br />
   About you: <%= f.text_area :about_you %><br />
